feat: hover scale

--- a/index.html
+++ b/index.html
@@ -66,16 +66,24 @@
                 </div>
             </div>
             <div class="items">
-                <div class="chair"></div>
+                <div class="article-container">
+                    <div class="chair"></div>
+                </div>                
                 <div class="item-two">
-                    <div class="lamp"></div> 
-                    <div class="carpet"></div>                    
+                    <div class="article-container">
+                        <div class="lamp"></div> 
+                    </div>
+                    <div class="article-container">
+                        <div class="carpet"></div>                         
+                    </div>                                
                 </div>
                 <div class="item-label">
                     <div class="label">
                         <span>DECORAÇÃO</span>
                     </div>
-                    <div class="bigger blanket"></div>
+                    <div class="article-container-bigger">
+                        <div class="blanket"></div>
+                    </div>                    
                 </div>
             </div>
             <div class="items">
@@ -83,25 +91,41 @@
                     <div class="label">
                         <span>COZINHA</span>
                     </div>
-                    <div class="bigger spoon"></div>
+                    <div class="article-container-bigger">
+                        <div class="spoon"></div>
+                    </div>                    
                 </div>
-                <div class="other-chair"></div>
+                <div class="article-container">
+                    <div class="other-chair"></div>
+                </div>               
                 <div class="item-two">
-                    <div class="pan"></div> 
-                    <div class="kettle"></div>                    
+                    <div class="article-container">
+                        <div class="pan"></div>
+                    </div>                    
+                    <div class="article-container">
+                        <div class="kettle"></div>    
+                    </div>                                         
                 </div>
             </div>
             <div class="items">
-                <div class="basket"></div>
+                <div class="article-container">
+                    <div class="basket"></div>
+                </div>
                 <div class="item-two">
-                    <div class="cushion"></div> 
-                    <div class="more-plants"></div>                    
+                    <div class="article-container">
+                        <div class="cushion"></div>
+                    </div>                     
+                    <div class="article-container">
+                        <div class="more-plants"></div>
+                    </div>                                        
                 </div>
                 <div class="item-label">
                     <div class="label">
                         <span>QUARTO</span>
                     </div>
-                    <div class="bigger bottle"></div>
+                    <div class="article-container-bigger">
+                        <div class="bigger bottle"></div>
+                    </div>                    
                 </div>
             </div>
         </div>
